<resources>
    <string name="app_name">Mi BiblioApp</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="contraseña">Contraseña</string>
    <string name="rep_contraseña">Repetir Contraseña</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="registrar">Registrar</string>
    <string name="respuesta">Nombre: %s \nCorreo: %s \nTeléfono: %s \nGénero: %s </string>
    <string name="error_contrasena">Las contraseñas no coinciden</string>
    <string name="registro_guardado">Registro guardado</string>
    <string name="campo_vacio">El campo no puede estar vacío</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="login_with_google">INICIAR SESIÓN CON GOOGLE</string>
    <string name="nulo" />
    <string name="registrarse">Registrarse</string>
    <string name="contrasenacorta">La contraseña debe tener mínimo 6 dígitos</string>
    <string name="datos_erroneos">El usuario y la contraseña no coinciden con los registros. Por favor, intente de nuevo.</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="usuario">Usuario:</string>
    <string name="prestamo">Préstamo</string>
    <string name="novedades">Novedades</string>
    <string name="encuentranos">Encuéntranos</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="buscar_titulo">Buscar por título</string>
    <string name="anio_publicacion">Año de publicación:</string>
    <string name="reservar">Reservar</string>
    <string name="historial">Historial de préstamos</string>
    <string name="map_descripcion">En este apartado encontrará la ubicación de las bibliotecas que están vinculadas a nuestra red.</string>
    <string name="buscar_autor_o_titulo">Buscar por título o autor</string>
    <string name="estado">Estado:</string>
    <string name="en_prestamo">En préstamo</string>
    <string name="disponible">Disponible</string>
    <string name="reservar_libro">Reservar libro</string>
    <string name="recomendacion">Recuerde que dispone de 24 horas para recoger su libro en nuestras bibliotecas. ¿Está seguro que desea reservarlo?</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_cuenta">No tengo una cuenta</string>
    <string name="registrarme">Registrarme</string>

</resources>