<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_prestamo"
            android:icon="@drawable/ic_book"
            android:title="@string/prestamo" />
        <item
            android:id="@+id/navigation_novedades"
            android:icon="@drawable/ic_info"
            android:title="@string/novedades" />
        <item
            android:id="@+id/navigation_encuentranos"
            android:icon="@drawable/ic_map"
            android:title="@string/encuentranos" />
        <item
            android:id="@+id/navigation_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/mi_perfil" />

    </group>
</menu>