<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_novedades">


    <fragment
        android:id="@+id/navigation_encuentranos"
        android:name="com.alexisberrio.formulario.ui.maps.EncuentranosFragment"
        android:label="@string/encuentranos"
        tools:layout="@layout/fragment_encuentranos" />
    <fragment
        android:id="@+id/navigation_novedades"
        android:name="com.alexisberrio.formulario.ui.novedades.NovedadesFragment"
        android:label="@string/novedades"
        tools:layout="@layout/fragment_novedades" />
    <fragment
        android:id="@+id/navigation_prestamo"
        android:name="com.alexisberrio.formulario.ui.libros.LibrosFragment"
        android:label="@string/prestamo"
        tools:layout="@layout/fragment_libros">
        <action
            android:id="@+id/action_navigation_prestamo_to_detalleFragment"
            app:destination="@id/detalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.alexisberrio.formulario.ui.perfil.PerfilFragment"
        android:label="@string/mi_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/detalleFragment"
        android:name="com.alexisberrio.formulario.ui.detalle.DetalleFragment"
        android:label="fragment_detalle"
        tools:layout="@layout/fragment_detalle">
        <argument
            android:name="LibroSeleccionado"
            app:argType="com.alexisberrio.formulario.data.server.Libros" />

    </fragment>

</navigation>